Fixed footer overlap

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,4 +1,4 @@
-.btn-success {
+.btn-success, .btn-info {
   width: 100%;
 }
 
