--- a/app/assets/stylesheets/components/_divs.scss
+++ b/app/assets/stylesheets/components/_divs.scss
@@ -17,7 +17,7 @@
 .cocktail-container {
   padding: 10px 6px;
 &:hover {
-  background: rgba(255, 242, 0, 0.2)
+  background: rgba(255, 242, 0, 0.2);
   }
 }
 
