--- a/app/assets/stylesheets/components/_fonts.scss
+++ b/app/assets/stylesheets/components/_fonts.scss
@@ -7,7 +7,7 @@ h1 {
   padding: 30px 0px 40px 0px;
   margin: 20px 0px 20px 0px;
   text-align: center;
-  font-family: 'Lobster', cursive;
+  font-family: 'Lato', sans-serif;
   font-size: 60px;
   color: rgb(50, 50, 50)
 }
