--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,7 +13,7 @@ $font-size-base: 18px;
 $gray-base:       $gray;
 $brand-primary:   $blue;
 $brand-success:   #B4D11F;
-$brand-info:      $yellow;
+$brand-info:      rgb(248, 131, 121);
 $brand-danger:    $red;
 $brand-warning:   $orange;
 
